--- a/doctor.html
+++ b/doctor.html
@@ -5,34 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <title>Clinica Brivi</title>
+    <title>Clinica Brivi - Formulario de Doctores</title>
     <style>
         body {
-            background-color: #0a0a0a;
-            color: #ff25cc;
+            background-color: rgb(198, 218, 174);;
+            color: #333;
         }
 
         h1.title,
         h2.subtitle {
-            color: #06ce49;
+            color: #030303;
             text-align: center;
+        }
+
+        .box {
+            background-color: #ffffff;
+            margin: 2rem auto;
+            max-width: 400px;
+            padding: 2rem;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         input.input,
         button.button.is-primary {
-            background-color: #60d36f;
-            color: #000000;
+            background-color: rgb(198, 218, 174) ;
+            color: #ffffff;
         }
 
-        .box {
-            background-color: #6d6b6b;
-            margin: 2rem auto;
-            max-width: 400px;
-            padding: 2rem;
-        }
-
-        button.button.is-meidum {
+        .button.is-medium {
             width: 100%;
+            margin-top: 1rem;
         }
     </style>
 </head>
@@ -45,29 +48,29 @@
         <div class="field">
             <label class="label" for="firstName">Nombre:</label>
             <div class="control">
-                <input class="input"  id="firstName" >
+                <input class="input" id="firstName" placeholder="Ej: Juan" required>
             </div>
         </div>
         <div class="field">
             <label class="label" for="lastName">Apellido:</label>
             <div class="control">
-                <input class="input" id="lastName" >
+                <input class="input" id="lastName" placeholder="Ej: Pérez" required>
             </div>
         </div>
         <div class="field">
-            <label class="label" for="identificacion">Numero de identificacion:</label>
+            <label class="label" for="identificacion">Número de identificación:</label>
             <div class="control">
-                <input class="input" id="identificacion" >
+                <input class="input" id="identificacion" placeholder="Ej: 123456789" required>
             </div>
         </div>
         <div class="field">
-            <label class="label" for="phone">Telefono:</label>
+            <label class="label" for="phone">Teléfono:</label>
             <div class="control">
-                <input class="input" type="text" id="phone" placeholder="Ej: +591 739-88784">
+                <input class="input" type="tel" id="phone" placeholder="Ej: +591 739-88784" required>
             </div>
         </div>
         <div class="block">
-            <button class="button is-primary is-medium is-fullwidth mt-6" onclick="submitForm()">Enviar</button>
+            <button class="button is-primary is-medium" onclick="submitForm()">Enviar</button>
         </div>
     </div>
     <script>
@@ -76,11 +79,12 @@
                 return {
                     firstName: document.getElementById('firstName').value,
                     lastName: document.getElementById('lastName').value,
+                    identificacion: document.getElementById('identificacion').value,
                     phone: document.getElementById('phone').value,
                 };
             }
 
-            const url = 'http://localhost:4000/api/patients';
+            const url = 'http://localhost:4000/api/doctors';
             const method = 'POST';
             const headers = {
                 'Accept': 'application/json',
