--- a/patients.html
+++ b/patients.html
@@ -1,91 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <title>Clinica Los Olivos</title>
-    <style>
-        body {
-            background-color: #0a0a0a;
-            color: #24862c;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulario de Pacientes - Clínica Brivi</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: rgb(198, 218, 174);
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
 
-        h1.title,
-        h2.subtitle {
-            color: #06ce49;
-            text-align: center;
-        }
+    form {
+      background-color: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      width: 400px;
+      max-width: 100%;
+    }
 
-        input.input,
-        button.button.is-primary {
-            background-color: #60d36f;
-            color: #000000;
-        }
+    h1 {
+      text-align: center;
+      color: #333;
+      margin-bottom: 20px;
+    }
 
-        .box {
-            background-color: #6d6b6b;
-            margin: 2rem auto;
-            max-width: 400px;
-            padding: 2rem;
-        }
+    label {
+      display: block;
+      margin-bottom: 10px;
+      color: #555;
+    }
 
-        button.button.is-meidum {
-            width: 100%;
-        }
-    </style>
+    input, textarea {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 18px;
+      box-sizing: border-box;
+      border: 1px solid rgb(198, 218, 174);
+      border-radius: 6px;
+      font-size: 16px;
+    }
+
+    button {
+      background-color: rgb(198, 218, 174);
+      color: white;
+      padding: 15px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      width: 100%;
+      display: block;
+      font-size: 18px;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: rgb(198, 218, 174);
+    }
+  </style>
 </head>
 <body>
-    <div class="box">
-        <h1 class="title is-1">🏥 Formulario Pacientes</h1>
-        <h2 class="subtitle is-3">Por favor ingresa tus datos</h2>
-    </div>
-    <div class="box my-6">
-        <div class="field">
-            <label class="label" for="firstName">Nombre:</label>
-            <div class="control">
-                <input class="input"  id="firstName" >
-            </div>
-        </div>
-        <div class="field">
-            <label class="label" for="lastName">Apellido:</label>
-            <div class="control">
-                <input class="input" id="lastName" >
-            </div>
-        </div>
-        <div class="field">
-            <label class="label" for="phone">Telefono:</label>
-            <div class="control">
-                <input class="input" type="text" id="phone" placeholder="Ej: +591 739-88784">
-            </div>
-        </div>
-        <div class="block">
-            <button class="button is-primary is-medium is-fullwidth mt-6" onclick="submitForm()">Enviar</button>
-        </div>
-    </div>
-    <script>
-        function submitForm() {
-            function getValues() {
-                return {
-                    firstName: document.getElementById('firstName').value,
-                    lastName: document.getElementById('lastName').value,
-                    phone: document.getElementById('phone').value,
-                };
-            }
 
-            const url = 'http://localhost:4000/api/patients';
-            const method = 'POST';
-            const headers = {
-                'Accept': 'application/json',
-                'Content-Type': 'application/json'
-            };
-            const body = JSON.stringify(getValues());
-            const metadata = { method, headers, body };
-            fetch(url, metadata)
-                .then(response => response.json())
-                .then(response => console.log(JSON.stringify(response)));
-        }
-    </script>
+  <form id="patientForm">
+    <h1>🧘Formulario de Pacientes - Clínica Brivi</h1>
+
+    <label for="name">Nombre:</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="details">Detalles:</label>
+    <textarea id="details" name="details" rows="4" required></textarea>
+
+    <label for="identificationNumber">Número de Identificación:</label>
+    <input type="text" id="identificationNumber" name="identificationNumber" required>
+
+    <label for="phoneNumber">Número de Teléfono:</label>
+    <input type="tel" id="phoneNumber" name="phoneNumber" required>
+
+    <button type="submit">Enviar</button>
+  </form>
+
+  <script>
+    document.getElementById("patientForm").addEventListener("submit", function(event) {
+      event.preventDefault();
+
+      // Aquí puedes agregar lógica para procesar los datos del formulario, por ejemplo, enviarlos a un servidor.
+      alert("Formulario enviado. Puedes agregar aquí la lógica para procesar los datos.");
+    });
+  </script>
+
 </body>
 </html>
